welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: '(' expected but identifier found.
while x < 6) {
      ^Program:14: error: illegal start of simple expression
	}
        ^