welcome.lessons.welcome.loopfor.LoopFor.scala.code

for (x <- 0 to 6) { 
    avance();
    x=x+1;
}
var x = 0
while x < 6) {
    avance()
    x = x + 1
}
